# ngx-istio-mixer

./: .gitignore  Cargo.toml  Dockerfile.base  Makefile  README.md  build.rs  config  config.make  nginx.mk  ngx_http_istio_mixer_module.c  wrapper.h
conf/: nginx-dynamic.conf  nginx.conf
config/: http.conf  nginx.conf
config/conf.d/: http.conf  remote.conf
docker/: Dockerfile.base  Dockerfile.module
mixer-crate/: Cargo.toml  build.rs
mixer-crate/src/istio_client/: check_cache.rs
mixer-crate/src/ngx/: mixer_check.rs  mod.rs
mixer-crate/src/transport/: mixer_grpc.rs
mixer-ngx/: Cargo.toml
mixer-ngx/src/: config.rs  lib.rs  location_config.rs  log.rs  main_config.rs  message.rs  mixer_check.rs  mixer_location.rs  mixer_report.rs  mixer_thread.rs  request.rs
mixer-ngx/src/ngx/: location_config.rs  main_config.rs  message.rs  mixer_check.rs  mixer_report.rs  mod.rs  request.rs  server_config.rs
mixer-tests/: Cargo.toml
mixer-tests/src/: intg_check_test.rs  lib.rs  nginx_check_test.rs  nginx_report_test.rs
mixer-transport/: Cargo.toml  build.rs
mixer-transport/src/: lib.rs
mixer-transport/src/attribute/: attr_compressor.rs  attr_wrapper.rs  global_dict.rs
mixer-transport/src/istio_client/: cache_elem.rs  check_cache.rs  lru_cache.rs  mixer_client_wrapper.rs  mod.rs  options.rs  quota_cache.rs  referenced.rs
mixer-transport/src/transport/: mixer_grpc.rs  mod.rs  status.rs  status_test.rs
mixer-transport/tests/: intg_check_test.rs  intg_test.rs  intg_transport_test.rs  util.rs
module/: config  config.make  ngx_http_istio_mixer_module.c
snippets/: tools.MD
src/: .gitignore  attr_dict.rs  attr_dict_test.rs  attr_global_test.rs  attr_wrapper.rs  attr_wrapper_test.rs  check_cache.rs  encode.rs  global_dict.rs  global_dict_test.rs  greeter_client.rs  lib.rs  message_dict.rs  message_dict_test.rs  mixer_client.rs  nginx_http.rs
src/attribute/: attr_wrapper.rs  attr_wrapper_test.rs  global_dict.rs  message_dict.rs
src/istio_client/: cache_elem.rs  check_cache.rs  check_cache_test.rs  check_options.rs  check_options_test.rs  code.rs  code_test.rs  common.rs  info.rs  lru_cache.rs  mixer_client_wrapper.rs  mod.rs  options.rs  referenced.rs  status.rs  status_test.rs
src/mixer/: .gitignore  mod.rs
src/ngx/: attr_wrapper.rs  attr_wrapper_test.rs  global_dict.rs  global_dict_test.rs  message.rs  message_dict.rs  message_dict_test.rs  mixer_check.rs  mixer_client.rs  mixer_location.rs  mixer_report.rs  mixer_thread.rs  mod.rs  request.rs
src/transport/: mixer_grpc.rs  server_info.rs  status.rs
test/: deploy.sh  update-module.sh
test/config/: nginx.conf
test/config/conf.d/: http.conf
tests/: attr_dict_test.rs
tool/: Makefile  README.md
