[package]
name = "mixer"
version = "0.0.16"
authors = ["Sehyo Chang   sehyo@nginx.com"]

[lib]
doctest = false
test = false
crate-type = ["staticlib","rlib"]


[dependencies]
grpc		    = "0.2.1"
protobuf        = "1.4.1"
futures         = "0.1.14"
futures-cpupool = "0.1.5"
tls-api         = "0.1.8"
httpbis         = "0.4.1"
lazy_static     = "0.2.8"
time            = "0.1.38"
base64          = "0.6.0"
ngx-rust        =  { path = "../ngx-rust" , version = "1.11.13" }

[build-dependencies]
protoc-rust-grpc = { path = "../grpc-rust/protoc-rust-grpc" }


[[bin]]
name = "report_client"
test = false

[[test]]
name = "attr_test"
path = "tests/attr_dict_test.rs"