[package]
name = "ngx-mixer-module"
version = "0.1.1"
authors = ["Sehyo Chang   sehyo@nginx.com"]



[lib]
doctest = false
test = true
crate-type = ["staticlib","rlib"]



[dependencies]
grpc		    = "0.2.1"
protobuf        = "1.4.1"
futures         = "0.1.14"
futures-cpupool = "0.1.5"
tls-api         = "0.1.8"
httpbis         = "0.4.1"
lazy_static     = "0.2.8"
time            = "0.1.38"
base64          = "0.6.0"
ngx-rust        =  { git = "https://github.com/nginmesh/ngx-rust.git", version = "0.1.2" }
#ngx-rust        =  { path = "../../ngx-rust/ngx-binding" , version = "0.1.2" }
ngx-mixer-transport        =  { path = "../mixer-transport" , version = "0.0.27" }
